@@ -5,11 +5,15 @@ import static org.github.terminological.roogledocs.DocumentHelper.imageSizes;
 import static org.github.terminological.roogledocs.DocumentHelper.text;
 import static org.github.terminological.roogledocs.StreamHelper.ofNullable;
 
+import java.io.ByteArrayInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.OutputStream;
 import java.net.URI;
+import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
@@ -17,14 +21,20 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
+import java.util.TreeMap;
+import java.util.Map.Entry;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
+import org.apache.commons.lang3.StringUtils;
 import org.github.terminological.roogledocs.datatypes.LongFormatTable;
 import org.github.terminological.roogledocs.datatypes.LongFormatText;
 import org.github.terminological.roogledocs.datatypes.Tuple;
 import org.github.terminological.roogledocs.datatypes.TupleList;
+import org.jbibtex.BibTeXDatabase;
+import org.jbibtex.ParseException;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -36,6 +46,9 @@ import com.google.api.services.docs.v1.model.Request;
 import com.google.api.services.docs.v1.model.Size;
 import com.google.api.services.docs.v1.model.Table;
 
+import de.undercouch.citeproc.CSL;
+import de.undercouch.citeproc.bibtex.BibTeXConverter;
+import de.undercouch.citeproc.bibtex.BibTeXItemDataProvider;
 import uk.co.terminological.rjava.UnconvertableTypeException;
 import uk.co.terminological.rjava.types.RBoundDataframe;
 import uk.co.terminological.rjava.types.RDataframe;
@@ -129,6 +142,22 @@ public class RDocument {
 //
 //	}
 
+	// Get rid of same place but wrong name links.
+	private static void findAndRemoveOld(Map<String,TupleList<Integer,Integer>> map, String name, Tuple<Integer,Integer> pos) {
+		map.forEach((k,v) -> {
+			if (!k.equals(name)) {
+				v.remove(pos);
+			}
+		});
+		map.entrySet().removeIf(e -> e.getValue().size()==0);
+	}
+	
+	/**
+	 * Fetches document content and scans it for text runs containing links and {{tags}}
+	 * Creates links for test that is in the correct format. 
+	 * @return 
+	 * @throws IOException
+	 */
 	public Map<String,TupleList<Integer,Integer>> updateInlineTags() throws IOException {
 		Document doc = getDoc(TEXT_AND_IMAGE_LINK_ELEMENTS);
 		RequestBuilder requests = new RequestBuilder(this);
@@ -143,17 +172,25 @@ public class RDocument {
 					Matcher m = r.matcher(s);
 					while(m.find()) {
 						String name =  s.substring(m.start(1), m.end(1));
-						// TODO: maybe this is no longer needed now we are not dealing with named ranges?
+						
 						if (!tl.containsKey(name))	tl.put(name, TupleList.create());
 						TupleList<Integer, Integer> tl2 = tl.get(name);
-						Tuple<Integer, Integer> match = Tuple.create(e.getStartIndex()+m.start(), e.getStartIndex()+m.end());
-						// TODO: check here. What happens if the text of the link has been updated but the link is still in place.
-						// I think this is working but need to check
-						if (!tl2.contains(match)) {
-							// Only add if donesn't already exist
+						Tuple<Integer, Integer> matchPosition = Tuple.create(e.getStartIndex()+m.start(), e.getStartIndex()+m.end());
+
+						if (!tl2.contains(matchPosition)) {
+							// The tag text is not matching existing link names at this position.
 							requests.createLinkTag(name, e.getStartIndex()+m.start(), e.getStartIndex()+m.end());
-							tl2.add(match);
+							tl2.add(matchPosition);
+						} else {
+							// The tag is present and a matching link exists at this position.
 						}
+						
+						// Q: What happens if a linked tag is updated changing the tag name 
+						// but the link is still in place with the old name.
+						// A: The link is updated as the tag name is not matched by tl.containsKey
+						// However the OLD name is still present in tl pointing to the same place.
+						// remove it:
+						findAndRemoveOld(tl, name, matchPosition);
 					}
 				});
 			});
@@ -164,27 +201,66 @@ public class RDocument {
 
 	}
 	
-//	public void updateTaggedText(String tagName, String newText) throws IOException {
-//
-//		// Fetch the document to determine the current indexes of the named ranges.
-//		// Find the matching named ranges.
-//		log.info("Autotext replacing: {{"+tagName+"}} with "+newText);
-//		updateInlineTags();
-//		Document document = getDoc(NAMED_RANGES);
-//		
+	public void updateTaggedText(Map<String,String> tagMap) throws IOException {
+
+		// Find the matching named ranges.
+		Map<String, TupleList<Integer, Integer>> lm = updateInlineTags();
+		
+		// Create a reverse order map of ranges to update and the tags to update with 
+		TreeMap<Range,String> allRanges = new TreeMap<>(Comparator.comparing(Range::getStartIndex).reversed());
+		
+		// add all the ranges in the tag map
+		lm.forEach((k,v) -> {
+			if (tagMap.keySet().contains(k)) {
+				v.forEach(t -> {
+					allRanges.put(
+						new Range().setStartIndex(t.getFirst()).setEndIndex(t.getSecond()), 
+						k
+					);
+				});
+			}
+		});
+		
+		// Create a sequence of requests for each range in reverse document order, so we can apply in one go.
+		RequestBuilder requests = new RequestBuilder(this);
+		for (Range range : allRanges.navigableKeySet()) {
+			// Delete all the content in the existing range.
+			requests.deleteContent(range);
+			String tagName = allRanges.get(range);
+			String newText = tagMap.get(tagName);
+
+			// Insert the replacement text.
+			Range newRange = requests.insertTextContent(range.getStartIndex(),newText, Optional.empty());
+
+			// Re-create the named range on the new text.
+			requests.createLinkTag(tagName, newRange);
+		
+		}
+
+		requests.sendRequest();
+	}
+	
+	public void updateTaggedText(String tagName, String newText) throws IOException {
+
+		// Fetch the document to determine the current indexes of the named ranges.
+		// Find the matching named ranges.
+		log.info("Autotext replacing: {{"+tagName+"}} with "+newText);
+		
+		Map<String,String> toUpdate = new HashMap<>();
+		toUpdate.put(tagName, newText);
+		updateTaggedText(toUpdate);
+		
+//		Map<String, TupleList<Integer, Integer>> lm = updateInlineTags();
+//				
 //		List<Range> allRanges = new ArrayList<>();
-//		Set<Integer> insertIndexes = new HashSet<>();
+//		//Set<Integer> insertIndexes = new HashSet<>();
 //		
-//		// RDocument.TEXT_LINK_ELEMENTS
-//		
-//		ofNullable(document.getNamedRanges())
-//			.flatMap(nr -> ofNullable(nr.get(tagName)))
-//			.flatMap(nrl -> ofNullable(nrl.getNamedRanges()))
-//			.forEach(namedRange -> {
-//				allRanges.addAll(namedRange.getRanges());
-//				insertIndexes.add(namedRange.getRanges().get(0).getStartIndex());
+//		lm.getOrDefault(tagName, TupleList.create()).stream()
+//			.forEach(t -> {
+//				allRanges.add(new Range().setStartIndex(t.getFirst()).setEndIndex(t.getSecond()));
+//				//insertIndexes.add(t.getFirst());
 //			});
-//
+//		
 //		// Sort the list of ranges by startIndex, in descending order.
 //		allRanges.sort(Comparator.comparing(Range::getStartIndex).reversed());
 //
@@ -194,53 +270,16 @@ public class RDocument {
 //			// Delete all the content in the existing range.
 //			requests.deleteContent(range);
 //
-//			if (insertIndexes.contains(range.getStartIndex())) {
+//			//if (insertIndexes.contains(range.getStartIndex())) {
 //				// Insert the replacement text.
 //				Range newRange = requests.insertTextContent(range.getStartIndex(),newText, Optional.empty());
 //
 //				// Re-create the named range on the new text.
-//				requests.createNamedRange(tagName, newRange);
-//			}
+//				requests.createLinkTag(tagName, newRange);
+//			//}
 //		}
 //
 //		requests.sendRequest();
-//	}
-	
-	public void updateTaggedText(String tagName, String newText) throws IOException {
-
-		// Fetch the document to determine the current indexes of the named ranges.
-		// Find the matching named ranges.
-		log.info("Autotext replacing: {{"+tagName+"}} with "+newText);
-		Map<String, TupleList<Integer, Integer>> lm = updateInlineTags();
-		
-		List<Range> allRanges = new ArrayList<>();
-		Set<Integer> insertIndexes = new HashSet<>();
-		
-		lm.getOrDefault(tagName, TupleList.create()).stream()
-			.forEach(t -> {
-				allRanges.add(new Range().setStartIndex(t.getFirst()).setEndIndex(t.getSecond()));
-				insertIndexes.add(t.getFirst());
-			});
-		
-		// Sort the list of ranges by startIndex, in descending order.
-		allRanges.sort(Comparator.comparing(Range::getStartIndex).reversed());
-
-		// Create a sequence of requests for each range.
-		RequestBuilder requests = new RequestBuilder(this);
-		for (Range range : allRanges) {
-			// Delete all the content in the existing range.
-			requests.deleteContent(range);
-
-			if (insertIndexes.contains(range.getStartIndex())) {
-				// Insert the replacement text.
-				Range newRange = requests.insertTextContent(range.getStartIndex(),newText, Optional.empty());
-
-				// Re-create the named range on the new text.
-				requests.createLinkTag(tagName, newRange);
-			}
-		}
-
-		requests.sendRequest();
 	}
 
 	public void updateTaggedImage(String tagName, URI imageLink) throws IOException {
@@ -576,9 +615,131 @@ public class RDocument {
 		RBoundDataframe<LongFormatText> df = longFormatText.attachPermissive(LongFormatText.class);
 		RequestBuilder request1 = new RequestBuilder(this);
 		int position = endPos(document);
-		request1.insertTextContent(position, "\n", Optional.empty());
+		request1.insertTextContent(position, "\n", Optional.of("NORMAL_TEXT"));
 		request1.writeTextContent(position+1, df.streamCoerce().collect(Collectors.toList()));
 		request1.sendRequest();
+	}
+	
+	private Stream<String> citeIds(String tag) {
+		return Stream.of(tag.replace("cite:", "").split(";")).map(s -> StringUtils.strip(s,"?"));
+	}
+	
+	private String[] citeIdArray(String tag) {
+		return citeIds(tag).collect(Collectors.toList()).toArray(new String[0]);
+	}
+	
+	public void updateCitations(String bibTex, String citationStyle) throws IOException, ParseException {
+		
+		// Load the bibtex and setup the parser.
+		BibTeXDatabase db = new BibTeXConverter().loadDatabase(new ByteArrayInputStream(bibTex.getBytes(StandardCharsets.UTF_8)));
+		BibTeXItemDataProvider provider = new BibTeXItemDataProvider();
+		provider.addDatabase(db);
+		List<String> bibtexIds = Arrays.asList(provider.getIds());
+				
+		CSL citeproc = new CSL(provider, citationStyle);
+		citeproc.setOutputFormat("text");
+		
+		// Get the tags in the document 
+		Map<String, TupleList<Integer, Integer>> allDocumentTags = this.updateInlineTags();
+		
+		// populate citeKeyOrder with the first occurrence of each citation in the document and the start range.
+		Map<String, Integer> citeKeyOrder = new HashMap<>();  
+		allDocumentTags.entrySet().stream()
+			.filter(e -> e.getKey().startsWith("cite:"))
+			.forEach(e -> {
+				citeIds(e.getKey())
+					.forEach(s -> {
+						int firstOccurs = e.getValue().stream().mapToInt(t->t.getFirst()).min().orElse(0); 
+						// the first index each citation appears int the document
+						if (!citeKeyOrder.containsKey(s) || citeKeyOrder.get(s) > firstOccurs) {
+							// ensures the value for each citation is the smallest:
+							citeKeyOrder.put(s, firstOccurs);
+						}
+					});
+			});
+		// sort tmp2 by the value and extract the citation ids. This is the list in which they appear in the 
+		// document.
+		List<Entry<String, Integer>> sortedKeys = new ArrayList<>(citeKeyOrder.entrySet());
+        sortedKeys.sort(Entry.comparingByValue());
+        
+        // register the keys in appearance order.
+        // once this is done the order we process the keys doesn;t matter.
+        List<String> notMatched = new ArrayList<>();
+        sortedKeys.stream()
+        		.map(k -> k.getKey())
+        		.forEach(s -> {
+        			if (bibtexIds.contains(s)) {
+        				citeproc.registerCitationItems(s);
+        			} else {
+        				notMatched.add(s);
+        			};
+        		});
+		
+        // maps tags e.g. {{cite:challen2013;danon2014} to "[1],[2]" display string replacement.
+		Map<String,String> tagToCite = new HashMap<>();
+		allDocumentTags.keySet().stream()
+			.filter(s -> s.startsWith("cite:"))
+			.forEach(s -> {
+				String[] citeIds = citeIdArray(s);
+				//all the citeIds for this specific cite tag should be in the bibtex if we are to proceed with the matching.
+				if (Stream.of(citeIds).allMatch(c -> bibtexIds.contains(c))) {
+					String citeString = citeproc.makeCitation(citeIds).stream().map(c -> c.getText()).collect(Collectors.joining(","));
+					tagToCite.put(s, citeString);
+				} else {
+					// Not all of the ids were matched. Some might have been though and if 
+					// so then they will have been registered and will appear in the bibliography.
+					// We can work out which ones and highlight them replacing the text with a 
+					String debugString = "{{cite:"+
+							Stream.of(citeIds).map(c -> {
+								if (!bibtexIds.contains(c)) {return "?"+c+"?";} else {return(c);}
+							}).collect(Collectors.joining(";"))
+							+"}}";
+					tagToCite.put(s, debugString);
+				}
+			});
+		
+		
+		// find and delete any tag of the format {{bib:[0-9*]}}
+		// use position of the first as place to enter bibliography
+		
+				
+		this.updateTaggedText(tagToCite);
+		
+		
+		RequestBuilder request = new RequestBuilder(this);
+		
+		List<Range> bibentries = allDocumentTags.entrySet().stream()
+			.filter(e -> e.getKey().matches("reference_[0-9]+"))
+			.flatMap(e -> e.getValue().stream())
+			.map(t -> new Range().setStartIndex(t.getFirst()).setEndIndex(t.getSecond()+1))
+			.collect(Collectors.toList());
+		
+		request.deleteContent(bibentries);
+		request.sendRequest();
+		
+		Document doc = getDoc(MINIMAL);
+		Integer insertAt = bibentries.stream().mapToInt(s -> s.getStartIndex()).min().orElse(endPos(doc));
+		
+		List<String> bibs = Arrays.asList(citeproc.makeBibliography().getEntries());
+		RequestBuilder request2 = new RequestBuilder(this);
+		Collections.reverse(bibs);
+		for (int i=0; i < bibs.size(); i++) {
+			String s = bibs.get(i);
+			Range tmp = request2.insertTextContent(insertAt, s, Optional.of("NORMAL_TEXT"));
+			request2.createLinkTag("reference_"+(bibs.size()-i), tmp);
+		}
+		request2.sendRequest();
+				
+		if (notMatched.size() > 0) {
+			log.info("Unmatched citation keys: ");
+			log.info(notMatched.stream().collect(Collectors.joining("; ")));
+			log.info("Available keys: ");
+			log.info(bibtexIds.stream().collect(Collectors.joining("; ")));
+		}
+		
+		
+		
+		citeproc.close();
 	}
 	
 	
